2011-05-04  Alpha Lam  <hclam@chromium.org>

        Not reviewed. Build fix.

        Test expectations for Linux.

        * platform/chromium-linux/fast/canvas/webgl/css-webkit-canvas-expected.png: Added.
        * platform/chromium-linux/fast/canvas/webgl/css-webkit-canvas-repaint-expected.png: Added.

2011-05-04  Andrey Kosyakov  <caseq@chromium.org>

        Unreviewed. Another shot at fixing flakiness under win (also renamed a couple of obsolete things).

        * inspector/elements/shadow-dom-expected.txt:
        * inspector/elements/shadow-dom.html:

2011-05-04  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        [results.html] don't show expand buttons for passing tests
        https://bugs.webkit.org/show_bug.cgi?id=60187

        After http://trac.webkit.org/changeset/85636 there's nothing
        to expand for the unexpected passes table.

        * fast/harness/resources/results-test.js:
        * fast/harness/results.html:

2011-05-04  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        [results.html] bucket crashes/timeouts into their own test lists
        https://bugs.webkit.org/show_bug.cgi?id=60181

        Also, don't show the "expected to fail but passed" table for ports
        that don't use an expectation file.

        * fast/harness/resources/results-test.js:
        * fast/harness/results.html:

2011-05-04  Andrey Kosyakov  <caseq@chromium.org>

        Unreviewed. Attempt to resolve flakiness on windows.

        * inspector/elements/shadow-dom.html:

2011-05-04  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: expose shadow DOM in the Elements panel
        https://bugs.webkit.org/show_bug.cgi?id=60160

        * http/tests/inspector/elements-test.js:
        (initialize_ElementTest.InspectorTest.nodeWithId.processChildren):
        (initialize_ElementTest.InspectorTest.nodeWithId.documentRequested):