@@ -1,3 +1,9 @@
+2011-05-04  Ojan Vafai  <ojan@chromium.org>
+
+        Improve styling on the toolbar. Make the background opaque.
+
+        * fast/harness/results.html:
+
 2011-05-04  Alpha Lam  <hclam@chromium.org>
 
         Not reviewed. Build fix.
